added a tutorial video
GitHub tutorial

https://youtu.be/R4_BQ4-7dd8?si=E-EvRYu5UvVQII86

--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -180,6 +180,18 @@
         <h1>Tutorial Collection</h1>
     <!--    <p class="subtitle">(more to be added later)</p>--> 
 
+    <section class="video-section">
+        <p>rookie GitHub walkthrough for rookie programmers | GitHub Desktop 2025 Guide?</p>
+        <div class="regular-video-container">
+            <div class="aspect-ratio-box regular-aspect-ratio">
+                <iframe src="https://youtu.be/R4_BQ4-7dd8?si=E-EvRYu5UvVQII86"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </section>
         <section class="video-section">
             <p>Google Drive can search for PDF by information inside of it - Tutorial</p>
             <div class="regular-video-container">
