--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -11,13 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
-          
+
             background: linear-gradient(135deg, var(--primary-bg) 0%, var(--secondary-bg) 100%);
             color: var(--text-color);
             margin: 0;
             padding: 0;
             min-height: 100vh;
-        } 
+        }
+
         :root {
             --primary-bg: #121212;
             --secondary-bg: #1e1e1e;
@@ -148,18 +149,19 @@
     <div class="topnav-1">
 
         <a class="active-1" href="Tutorials.html">
-          <small>Resources<br>Tutorials</small>
+            <small>Resources<br>Tutorials</small>
         </a>
         <a class="active-1" href="References.html">
-          <small>Project<br>References</small>
+            <small>Project<br>References</small>
         </a>
         <a class="active-1" href="Blog.html">
-          <small>CSE<br>Blog</small>
+            <small>CSE<br>Blog</small>
         </a>
-        <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
-          <small>UITS<br>G-Drive</small>
+        <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+            target="_blank">
+            <small>UITS<br>G-Drive</small>
         </a>
-      </div>
+    </div>
 
 
     <!-- BOTTOM BAR "navbar" -->
@@ -178,20 +180,19 @@
     <div class="glow"></div>
     <div class="container">
         <h1>Tutorial Collection</h1>
-    <!--    <p class="subtitle">(more to be added later)</p>--> 
+        <!--    <p class="subtitle">(more to be added later)</p>-->
 
-    <section class="video-section">
-        <p>rookie GitHub walkthrough for rookie programmers | GitHub Desktop 2025 Guide?</p>
-        <div class="regular-video-container">
-            <div class="aspect-ratio-box regular-aspect-ratio">
-                <iframe src="https://youtu.be/R4_BQ4-7dd8?si=E-EvRYu5UvVQII86"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen>
-                </iframe>
+        <section class="video-section">
+            <p>rookie GitHub walkthrough for rookie programmers | GitHub Desktop 2025 Guide?</p>
+            <div class="regular-video-container">
+                <div class="aspect-ratio-box regular-aspect-ratio">
+                    <iframe src="https://www.youtube.com/embed/R4_BQ4-7dd8" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                    </iframe>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
         <section class="video-section">
             <p>Google Drive can search for PDF by information inside of it - Tutorial</p>
             <div class="regular-video-container">
@@ -225,13 +226,15 @@
 
     <a href="../index.html" class="home-button">
         <svg class="home-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
+            <path
+                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
         </svg>
     </a>
- <!-- BACK BUTTON -->
+    <!-- BACK BUTTON -->
 
- <a href="javascript:history.back()" class="back-icon">&#8592;</a>
+    <a href="javascript:history.back()" class="back-icon">&#8592;</a>
 
 
 </body>
+
 </html>
