--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -186,7 +186,7 @@
             <p>rookie GitHub walkthrough for rookie programmers | GitHub Desktop 2025 Guide?</p>
             <div class="regular-video-container">
                 <div class="aspect-ratio-box regular-aspect-ratio">
-                    <iframe src="https://www.youtube.com/embed/2JMVbwB1zW8" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/38USkcI0mcA" title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen>
                     </iframe>
