--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
           of the
           <b>UNOFFICIAL</b>
           Online
-          Resources for the <i>students</i> of UITS. I will be primarily working on <a
+          Resources for the <i>students</i> of UITS. I will be primarily working on this <a
             href="https://github.com/b1tranger/oUITS-Resources" target="_blank"
-            style="color:rgba(4, 0, 128, 0.806);">GitHub</a>( mirror: <a href="https://uits-res.netlify.app/"
+            style="color:rgba(4, 0, 128, 0.806);">GitHub Repo </a>( mirror deployment: <a href="https://uits-res.netlify.app/"
             style="color:rgba(4, 0, 128, 0.806);">Netlify</a> and <a href="https://b1tranger.github.io/oUITS-Resources/"
-            style="color:rgba(4, 0, 128, 0.806);"> Github </a> ). Most of the materials here are publicly available and
+            style="color:rgba(4, 0, 128, 0.806);"> github.io </a> ). Most of the materials here are publicly available and
           you are free to modify and reuse them
           but
           please be mindful of possible Legal issues (like Copyright materials)</small></p>
