--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -438,7 +438,7 @@
             <div class="popup-menu-category" align="center">
                 <!-- <div class="category-title">Coding Resources</div> -->
                 <div class="link-item">
-                    <a href="https://roadmap.sh/">
+                    <a href="https://roadmap.sh/" target="_blank">
                         Standard Roadmaps
                     </a>
                 </div>
