used tags as plain text
https://stackoverflow.com/questions/6817262/how-to-display-html-tags-as-plain-text

--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -301,6 +301,14 @@
                     </a>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <a href="https://codeforces.com/streams"
+                        target="_blank">
+                        CodeForces &lt streams &gt
+                    </a>
+                </td>
+            </tr>
             <tr><!-- First container with menu button -->
                 <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);">
                     <!-- <div class="menu-line"></div>
@@ -315,7 +323,7 @@
                     <!-- <div class="menu-line"></div>
                     <div class="menu-line"></div>
                     <div class="menu-line"></div> -->
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Online Tutorials
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Online Resources
                     </p>
                 </td>
             </tr>
@@ -324,7 +332,7 @@
                     <!-- <div class="menu-line"></div>
                     <div class="menu-line"></div>
                     <div class="menu-line"></div> -->
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">UITS Tutorials
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">UITS Resources
                     </p>
                 </td>
             </tr>
