added cf stream screenshot

--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -48,7 +48,7 @@
             border-radius: 8px;
             padding: 12px;
             position: relative;
-           
+
             cursor: pointer;
             display: flex;
             flex-direction: column;
@@ -259,18 +259,19 @@
     <div class="topnav-1">
 
         <a class="active-1" href="Tutorials.html">
-          <small>Resources<br>Tutorials</small>
+            <small>Resources<br>Tutorials</small>
         </a>
         <a class="active-1" href="References.html">
-          <small>Project<br>References</small>
+            <small>Project<br>References</small>
         </a>
         <a class="active-1" href="Blog.html">
-          <small>CSE<br>Blog</small>
+            <small>CSE<br>Blog</small>
         </a>
-        <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
-          <small>UITS<br>G-Drive</small>
+        <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+            target="_blank">
+            <small>UITS<br>G-Drive</small>
         </a>
-      </div>
+    </div>
 
 
     <!-- BOTTOM BAR "navbar" -->
@@ -301,14 +302,7 @@
                     </a>
                 </td>
             </tr>
-            <tr>
-                <td>
-                    <a href="https://codeforces.com/streams"
-                        target="_blank">
-                        CodeForces &lt streams &gt
-                    </a>
-                </td>
-            </tr>
+
             <tr><!-- First container with menu button -->
                 <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);">
                     <!-- <div class="menu-line"></div>
@@ -338,6 +332,40 @@
             </tr>
         </table>
     </div>
+
+    <!-- IFRAME BEFORE POPUP MENU -->
+    <table align=center class="resources-table-5">
+        <tr>
+            <th >
+                <div class="topnav-3" >
+                    <h3>
+                        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);""><a
+                                href="https://codeforces.com/streams" target="_blank"
+                                style="color:rgba(255, 255, 255, 0.776);">
+                                CodeForces &lt streams &gt
+                            </a></p>
+                    </h3>
+                </div>
+
+                <!-- "top-bar2" -->
+
+                <div>
+                    <div class="container">
+
+                        <div class="img-container">
+                            <img src="../images/cf-streams.jpeg" alt="Codeforces Streams Page">
+                            <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
+                        </div>
+                    </div>
+            </th>
+        </tr>
+    </table>
+    <br><br><br>
+
+
+
+
+
     <!-- First popup menu -->
     <div class="popup-menu" id="popupMenu1">
         <div class="popup-close popup-close-btn"></div>
