used .webp instead of .png

--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -353,7 +353,7 @@
                     <div class="container">
 
                         <div class="img-container">
-                            <img src="../images/cf-streams.jpeg" alt="Codeforces Streams Page">
+                            <img src="../images/cf-streams.webp" alt="Codeforces Streams Page">
                             <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
                         </div>
                     </div>
