--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
       <!-- SOCIAL LINKS -->
       <p align=center style="color:rgba(0, 0, 0, 0.564)">Socials? </p>
 
-      <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.png
+      <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.webp
           alt="Discord Server (Protein Shake)" width="70" height="70"></a>
 
-      <a href="https://t.me/s/oUITS_ORnU" target="_blank"><img src=images\telegram-logo2.png
+      <a href="https://t.me/s/oUITS_ORnU" target="_blank"><img src=images\telegram-logo2.webp
           alt="Telegram Channel (oUITS - Online Resources and Updates)" width="70" height="70"></a>
 
-      <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.png
+      <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.webp
           alt="Facebook Group (oUITS - Online Resources)" width="70" height="70"></a>
 
       <!-- ANON NOTE (FEEDBACK) -->
