added separate tutorial page for all related

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
         <!-- "topnav3" -->
 
         <div class="topnav-3">
-          <h2>
-            <p align=center style="color:rgba(255, 255, 255, 0.776);">my latest blog</p>
-          </h2>
+          <h3>
+            <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>b1tranger</i>'s blog</p>
+          </h3>
         </div>
 
         <!-- "top-bar2" -->
