--- a/page-depth-01/Blog.html
+++ b/page-depth-01/Blog.html
@@ -324,14 +324,14 @@
     <div class="container-5" align=center>
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
-                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">My blog
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">personal blog
                 </p>
             </tr>
             <tr>
                 <td>
                     <a href="https://b1tranger-coding.blogspot.com/"
                         target="_blank">
-                        go to <i>b1tranger</i>?
+                        <i>b1tranger</i>'s @blogspot
                     </a>
                 </td>
             </tr>
@@ -347,7 +347,7 @@
                 <!-- <div class="category-title">People I Follow</div> -->
                 <div class="link-item">
                     <a href="https://mrinmoyakash.blogspot.com/" target="_blank">
-                        Mrinmoy Biswas Akash
+                        Mrinmoy Biswas Akash @blogspot
                     </a>
                 </div>
                 <div class="link-item">
@@ -370,7 +370,7 @@
                 <!-- <div class="category-title">Coding Resources</div> -->
                 <div class="link-item">
                     <a href="https://codeforces.com/blog/YouKn0wWho" target="_blank">
-                        YouKn0wWho's blog
+                        YouKn0wWho @codeforces
                     </a>
                 </div>
                 <div class="link-item">
