--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -469,8 +469,7 @@
     </div>
 
     <!-- Shared backdrop for all popups -->
-    <div class="popup-backdrop" id="popupBackdrop"></div>
-   
+    <div class="popup-backdrop" id="popupBackdrop">
    <script>
          document.addEventListener('DOMContentLoaded', function () {
             // Button and popup pairs
