--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -10,133 +10,247 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
-        body {
-
-            background: linear-gradient(135deg, var(--primary-bg) 0%, var(--secondary-bg) 100%);
-            color: var(--text-color);
+        /* body {
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            min-height: 100vh;
-        }
+            background-color: #333;
+            color: #fff;
+        } */
 
-        :root {
-            --primary-bg: #121212;
-            --secondary-bg: #1e1e1e;
-            --text-color: #e0e0e0;
-            --subtitle-color: #b0b0b0;
-            --accent-color: #3e8de3;
-            --regular-radius: 16px;
-            --shorts-radius: 24px;
-        }
+        .container-5 {
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 40px 20px;
-            text-align: center;
-        }
-
-        h1 {
-            font-weight: 600;
-            margin-bottom: 0.5em;
-            font-size: 2.5rem;
-            background: linear-gradient(90deg, var(--text-color), var(--subtitle-color));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            text-shadow: 0 0 30px rgba(255, 255, 255, 0.1);
-        }
-
-        h2 {
-            font-weight: 600;
-            font-size: 1.8rem;
-            color: var(--accent-color);
-            margin-top: 2em;
-            margin-bottom: 0.8em;
-        }
-
-        .subtitle {
-            font-size: 1.1rem;
-            margin-bottom: 2em;
-            color: var(--subtitle-color);
-        }
-
-        .video-section {
-            margin-bottom: 4em;
-        }
-
-        .regular-video-container {
+            border-radius: 15px;
+            padding: 25px;
+            margin: 20px auto;
+            width: 79%;
+            max-width: 800px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            /*the button visibility*/
             position: relative;
-            width: 800px;
-            max-width: 100%;
-            margin: 0 auto;
-            line-height: 0;
-            /* Removes any potential whitespace */
-            overflow: hidden;
-            border-radius: var(--regular-radius);
+            background-color: #000000c5;
+
         }
 
-        .shorts-video-container {
+        .drive-link-5 {
+            margin-bottom: 20px;
+        }
+
+        .drive-link-5 a {
+            color: #b8b8e5;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .drive-link-5 a:hover {
+            color: #ffffff;
+        }
+
+        .menu-button {
+            background-color: #00000000;
+            border-radius: 8px;
+            padding: 12px;
             position: relative;
-            width: 320px;
-            max-width: 100%;
-            margin: 0 auto;
-            line-height: 0;
-            /* Removes any potential whitespace */
-            overflow: hidden;
-            border-radius: var(--shorts-radius);
+            /* border-collapse: collapse; */
+            /* border-spacing: ; */
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 5px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+            z-index: 50;
+            transition: background-color 0.3s ease;
         }
 
-        .aspect-ratio-box {
-            position: relative;
+        .menu-button:hover {
+            background-color: rgba(100, 100, 150, 0.9);
         }
 
-        .regular-aspect-ratio {
-            padding-top: 56.25%;
-            /* 16:9 aspect ratio */
+        .menu-line {
+            width: 20px;
+            height: 2px;
+            background-color: #d8d8ff;
+            transition: all 0.3s ease;
         }
 
-        .shorts-aspect-ratio {
-            padding-top: 177.77%;
-            /* 9:16 aspect ratio for Shorts */
+        .menu-button:hover .menu-line {
+            background-color: #ffffff;
         }
 
-        iframe {
+        .menu-button.active .menu-line:nth-child(1) {
+            transform: translateY(7px) rotate(45deg);
+        }
+
+        .menu-button.active .menu-line:nth-child(2) {
+            opacity: 0;
+        }
+
+        .menu-button.active .menu-line:nth-child(3) {
+            transform: translateY(-7px) rotate(-45deg);
+        }
+
+        /* Modal Popup */
+        .popup-menu {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0.9);
+            width: 80%;
+            max-width: 600px;
+            max-height: 80vh;
+            background-color: rgba(50, 50, 70, 0.95);
+            border-radius: 15px;
+            box-shadow: 0 4px 25px rgba(0, 0, 0, 0.5);
+            z-index: 999;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+            display: flex;
+            flex-direction: column;
+            padding: 30px;
+            overflow-y: auto;
+
+            pointer-events: none;
+        }
+
+        .popup-menu.open {
+            opacity: 1;
+            visibility: visible;
+            transform: translate(-50%, -50%) scale(1);
+            pointer-events: auto;
+        }
+
+        /* .popup-close {
             position: absolute;
+            top: 15px;
+            right: 15px;
+            width: 30px;
+            height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            border-radius: 50%;
+            background-color: rgba(80, 80, 120, 0.4);
+            transition: background-color 0.3s ease;
+        } */
+
+        .popup-close:hover {
+            background-color: #424242;
+        }
+
+        /* .popup-close::before,
+        .popup-close::after {
+            content: '';
+            position: absolute;
+            width: 15px;
+            height: 2px;
+            background-color: #424242;
+        } */
+
+        .popup-close::before {
+            transform: rotate(45deg);
+        }
+
+        .popup-close::after {
+            transform: rotate(-45deg);
+        }
+
+        .popup-menu-title {
+            color: #ffffff;
+            font-size: 1.4rem;
+            margin-bottom: 30px;
+            text-align: center;
+            border-bottom: 1px solid rgba(200, 200, 255, 0.2);
+            padding-bottom: 15px;
+        }
+
+        .popup-menu-categories {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .popup-menu-category {
+            margin-bottom: 25px;
+        }
+
+        .category-title {
+            color: rgba(220, 220, 255, 0.9);
+            font-size: 1.1rem;
+            margin-bottom: 15px;
+            padding-left: 10px;
+            border-left: 3px solid #b8b8e5;
+        }
+
+        .link-item {
+            background-color: rgba(80, 80, 120, 0.4);
+            border-radius: 8px;
+            margin-bottom: 10px;
+            transition: all 0.3s ease;
+            overflow: hidden;
+        }
+
+        .link-item:hover {
+            background-color: rgba(100, 100, 150, 0.6);
+            transform: translateY(-3px);
+        }
+
+        .link-item a {
+            color: rgba(240, 240, 255, 0.9);
+            text-decoration: none;
+            display: block;
+            padding: 15px;
+            transition: color 0.3s ease;
+        }
+
+        .link-item a:hover {
+            color: #ffffff;
+        }
+
+        .popup-backdrop {
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: transparent;
+            background-color: rgba(30, 30, 40, 0.7);
+            z-index: 997;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s ease;
         }
 
-        .footer {
-            margin-top: 3em;
-            color: #8c8c8c;
-            font-size: 0.9rem;
+        .popup-backdrop.open {
+            opacity: 1;
+            visibility: visible;
         }
 
-        .glow {
-            position: fixed;
-            width: 70%;
-            height: 70%;
-            background: radial-gradient(circle, rgba(90, 90, 255, 0.05) 0%, rgba(70, 70, 220, 0) 70%);
-            top: 15%;
-            left: 15%;
-            z-index: -1;
-            filter: blur(80px);
-        }
-
-        @media (max-width: 840px) {
-            h1 {
-                font-size: 2rem;
+        @media (max-width: 768px) {
+            .popup-menu {
+                width: 90%;
+                padding: 20px;
             }
 
-            h2 {
-                font-size: 1.5rem;
+            .popup-menu-categories {
+                grid-template-columns: 1fr;
             }
 
-            .container {
-                padding: 20px 10px;
+            .resources-table-5 {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .resources-table-5 tr {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .resources-table-5 td {
+                margin: 5px 0;
+                width: 90%;
             }
         }
     </style>
@@ -175,52 +289,151 @@
 
     </div>
     <!-- ----------------------------------------------------------------------- -->
-
-
-    <div class="glow"></div>
-    <div class="container">
-        <h1>Tutorial Collection</h1>
-        <!--    <p class="subtitle">(more to be added later)</p>-->
-
-        <section class="video-section">
-            <p>rookie GitHub walkthrough for rookie programmers | GitHub Desktop 2025 Guide?</p>
-            <div class="regular-video-container">
-                <div class="aspect-ratio-box regular-aspect-ratio">
-                    <iframe src="https://www.youtube.com/embed/38USkcI0mcA" title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen>
-                    </iframe>
-                </div>
-            </div>
-        </section>
-        <section class="video-section">
-            <p>Google Drive can search for PDF by information inside of it - Tutorial</p>
-            <div class="regular-video-container">
-                <div class="aspect-ratio-box regular-aspect-ratio">
-                    <iframe src="https://www.youtube.com/embed/Zwx5VvdWbh8?si=oKj9CioROByiuwZu"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen>
-                    </iframe>
-                </div>
-            </div>
-        </section>
-
-        <section class="video-section">
-            <p>Offline Browser | Making w3schools and geeksforgeeks accessible offline</p>
-            <div class="shorts-video-container">
-                <div class="aspect-ratio-box shorts-aspect-ratio">
-                    <iframe src="https://www.youtube.com/embed/sFuVutbYbws?si=pwTIwD4gPRP2oge4"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen>
-                    </iframe>
-                </div>
-            </div>
-        </section>
-
-        <!-- <p class="footer" align=center><a style="color: #8c8c8c;"" href=../index.html>Go back to index</a> -->
+    <div class="container-5" align=center>
+        <table class="resources-table-5" align=center style="width:90%;">
+            <tr>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">UITS Resources
+                </p>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
+                        target="_blank">
+                        UITS Contests Archive
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <!-- 3rd container with different menu button -->
+                <td class="menu-button" id="menuButton3" align="center" style="color: rgba(240, 248, 255, 0.85);">
+                    <!-- <div class="menu-line"></div>
+                    <div class="menu-line"></div>
+                    <div class="menu-line"></div> -->
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">UITS Tutorials
+                    </p>
+                </td>
+            </tr>
+        </table>
     </div>
+
+    <div class="container-5" align=center>
+        <table class="resources-table-5" align=center style="width:90%;">
+            <tr>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">personal tutorials
+                </p>
+            </tr>
+            <tr>
+                <td>
+                    <a href="page-depth-02/My-guides.html">
+                        b1tranger @YT
+                    </a>
+                </td>
+            </tr>
+           
+        </table>
+    </div>
+
+
+
+    
+    <!-- 3rd popup menu with different content -->
+    <div class="popup-menu" id="popupMenu3">
+        <div class="popup-close popup-close-btn"></div>
+        <!-- <div class="popup-menu-title">Resources & Tools</div> -->
+        <div class="popup-menu-categories">
+            <div class="popup-menu-category" align="center">
+                <!-- <div class="category-title">Coding Resources</div> -->
+                <div class="link-item">
+                    <a href="https://www.youtube.com/@CPSAcademy" target="_blank">
+                        Sakib bhai (Batch-52) @YT
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.youtube.com/@gowithhabib" target="_blank">
+                        Habibur Rahman (Batch-??) @YT
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.youtube.com/@safridbhuiyan" target="_blank">
+                        Safrid Bhuiyan (Batch-53) @YT
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="#" target="_blank">
+                        #
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="#" target="_blank">
+                        #
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="#" target="_blank">
+                        #
+                    </a>
+                </div>
+                <!-- More links here -->
+            </div>
+        </div>
+    </div>
+ <!-- Shared backdrop for all popups -->
+ <div class="popup-backdrop" id="popupBackdrop">
+ <script>
+     document.addEventListener('DOMContentLoaded', function () {
+         // Button and popup pairs
+         const menuPairs = [
+            //  { button: 'menuButton1', popup: 'popupMenu1' },
+            //  { button: 'menuButton2', popup: 'popupMenu2' },
+             { button: 'menuButton3', popup: 'popupMenu3' }
+            //  { button: 'menuButton4', popup: 'popupMenu4' }
+             // Add more pairs as needed
+         ];
+
+         const popupBackdrop = document.getElementById('popupBackdrop');
+         let activePopup = null;
+
+         // Set up each button-popup pair
+         menuPairs.forEach(pair => {
+             const button = document.getElementById(pair.button);
+             const popup = document.getElementById(pair.popup);
+
+             button.addEventListener('click', function () {
+                 // Open this specific popup
+                 popup.classList.add('open');
+                 popupBackdrop.classList.add('open');
+                 button.classList.add('active');
+                 activePopup = popup;
+             });
+         });
+
+         // Close buttons for all popups
+         const closeButtons = document.querySelectorAll('.popup-close-btn');
+         closeButtons.forEach(btn => {
+             btn.addEventListener('click', closeActivePopup);
+         });
+
+         // Backdrop click closes any open popup
+         popupBackdrop.addEventListener('click', closeActivePopup);
+
+         function closeActivePopup() {
+             // Remove active class from all buttons
+             document.querySelectorAll('.menu-button').forEach(btn => {
+                 btn.classList.remove('active');
+             });
+
+             // Close all popups
+             document.querySelectorAll('.popup-menu').forEach(popup => {
+                 popup.classList.remove('open');
+             });
+
+             // Hide backdrop
+             popupBackdrop.classList.remove('open');
+             activePopup = null;
+         }
+     });
+ </script>
+ </div>
     <br><br><br><br><br>
     <!-- HOME BUTTON -->
 
