--- a/page-depth-01/page-depth-02/My-guides.html
+++ b/page-depth-01/page-depth-02/My-guides.html
@@ -181,9 +181,8 @@
     <div class="container">
         <h1>Tutorial Collection</h1>
         <!--    <p class="subtitle">(more to be added later)</p>-->
-
+        <br><br>
         <section class="video-section">
-            <p>rookie GitHub walkthrough for rookie programmers | GitHub Desktop 2025 Guide?</p>
             <div class="regular-video-container">
                 <div class="aspect-ratio-box regular-aspect-ratio">
                     <iframe src="https://www.youtube.com/embed/38USkcI0mcA" title="YouTube video player" frameborder="0"
@@ -192,9 +191,12 @@
                     </iframe>
                 </div>
             </div>
+            <p>rookie GitHub walkthrough for rookie programmers | GitHub Desktop 2025 Guide?</p>
         </section>
+
+        <!-- REGULAR IFRAME -->
         <section class="video-section">
-            <p>Google Drive can search for PDF by information inside of it - Tutorial</p>
+
             <div class="regular-video-container">
                 <div class="aspect-ratio-box regular-aspect-ratio">
                     <iframe src="https://www.youtube.com/embed/Zwx5VvdWbh8?si=oKj9CioROByiuwZu"
@@ -204,10 +206,11 @@
                     </iframe>
                 </div>
             </div>
+            <p>Google Drive can search for PDF by information inside of it - Tutorial</p>
         </section>
 
+        <!-- SHORTS IFRAME -->
         <section class="video-section">
-            <p>Offline Browser | Making w3schools and geeksforgeeks accessible offline</p>
             <div class="shorts-video-container">
                 <div class="aspect-ratio-box shorts-aspect-ratio">
                     <iframe src="https://www.youtube.com/embed/sFuVutbYbws?si=pwTIwD4gPRP2oge4"
@@ -217,6 +220,7 @@
                     </iframe>
                 </div>
             </div>
+            <p>Offline Browser | Making w3schools and geeksforgeeks accessible offline</p>
         </section>
 
         <!-- <p class="footer" align=center><a style="color: #8c8c8c;"" href=../index.html>Go back to index</a> -->
