--- a/page-depth-01/page-depth-02/My-guides.html
+++ b/page-depth-01/page-depth-02/My-guides.html
@@ -179,7 +179,7 @@
 
     <div class="glow"></div>
     <div class="container">
-        <h1>Tutorial Collection</h1>
+        <h1>my Tutorial Collection</h1>
         <!--    <p class="subtitle">(more to be added later)</p>-->
         <br><br>
         <section class="video-section">
