added apk download link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <!-- TOP BAR -->
 
   <div class="topnav-1">
-
+    <a class="active-1"
+      href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG"><small>web-app</small></a>
     <a class="active-1" href="page-depth-01/Tutorials.html">
       <small>Resources<br>Tutorials</small>
     </a>
@@ -135,7 +136,8 @@
           style="color:rgba(0, 0, 0, 0.818);">Leave a
           note?</a>..<a
           href="https://docs.google.com/spreadsheets/d/1LnARUrE4lSPWi1w4Iw-kMl8nouB2F8UTn6Z8zvE0wGo/edit?usp=sharing"
-          target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a><br><br>...........................<small><a href=abstraction/wip.html
+          target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a><br><br>...........................<small><a
+            href=abstraction/wip.html
             style="color:rgba(74, 170, 214, 0.499);color:rgba(0, 0, 0, 0.071);">wip?</a></small></p>
 
     </div>
@@ -148,9 +150,10 @@
           Online
           Resources for the <i>students</i> of UITS. I will be primarily working on this <a
             href="https://github.com/b1tranger/oUITS-Resources" target="_blank"
-            style="color:rgba(4, 0, 128, 0.806);">GitHub Repo </a>( mirror deployment: <a href="https://uits-res.netlify.app/"
-            style="color:rgba(4, 0, 128, 0.806);">Netlify</a> and <a href="https://b1tranger.github.io/oUITS-Resources/"
-            style="color:rgba(4, 0, 128, 0.806);"> github.io </a> ). Most of the materials here are publicly available and
+            style="color:rgba(4, 0, 128, 0.806);">GitHub Repo </a>( mirror deployment: <a
+            href="https://uits-res.netlify.app/" style="color:rgba(4, 0, 128, 0.806);">Netlify</a> and <a
+            href="https://b1tranger.github.io/oUITS-Resources/" style="color:rgba(4, 0, 128, 0.806);"> github.io </a> ).
+          Most of the materials here are publicly available and
           you are free to modify and reuse them
           but
           please be mindful of possible Legal issues (like Copyright materials)</small></p>
