--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -258,22 +258,22 @@
     <!-- TOP BAR -->
 
     <div class="topnav-1">
-
-        <a class="active-1" href="Tutorials.html">
-            <small>Resources<br>Tutorials</small>
+        <a class="active-1"
+          href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG"><small>web-app</small></a>
+        <a class="active-1" href="page-depth-01/Tutorials.html">
+          <small>Resources<br>Tutorials</small>
         </a>
-        <a class="active-1" href="References.html">
-            <small>Project<br>References</small>
+        <a class="active-1" href="page-depth-01/References.html">
+          <small>Project<br>References</small>
         </a>
-        <a class="active-1" href="Blog.html">
-            <small>CSE<br>Blog</small>
+        <a class="active-1" href="page-depth-01\Blog.html">
+          <small>CSE<br>Blog</small>
         </a>
         <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
-            target="_blank">
-            <small>UITS<br>G-Drive</small>
+          target="_blank">
+          <small>UITS<br>G-Drive</small>
         </a>
-    </div>
-
+      </div>
 
     <!-- BOTTOM BAR "navbar" -->
 
@@ -499,7 +499,7 @@
     </div>
 
     <!-- Shared backdrop for all popups -->
-    <div class="popup-backdrop" id="popupBackdrop"></div>
+    <div class="popup-backdrop" id="popupBackdrop">
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Button and popup pairs
