--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -14,7 +14,7 @@
  <!-- TOP BAR -->
  <div class="topnav-1">
   <a class="active-1"
-    href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG"><small>web-app</small></a>
+    href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG" target="_blank"><small>web-app</small></a>
   <a class="active-1" href="page-depth-01/Tutorials.html">
     <small>Resources<br>Tutorials</small>
   </a>
