--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -12,7 +12,6 @@
             /* max-width: 600px; */
             text-align: center;
         }
-        
     </style>
 </head>
 
@@ -20,22 +19,22 @@
     <!-- TOP BAR -->
 
     <div class="topnav-1">
-        <a class="active-1"
-          href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG" target="_blank"><small>web-app</small></a>
-        <a class="active-1" href="page-depth-01/Tutorials.html">
-          <small>Resources<br>Tutorials</small>
+        <a class="active-1" href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG"
+            target="_blank"><small>web-app</small></a>
+        <a class="active-1" href="Tutorials.html">
+            <small>Resources<br>Tutorials</small>
         </a>
-        <a class="active-1" href="page-depth-01/References.html">
-          <small>Project<br>References</small>
+        <a class="active-1" href="References.html">
+            <small>Project<br>References</small>
         </a>
-        <a class="active-1" href="page-depth-01\Blog.html">
-          <small>CSE<br>Blog</small>
+        <a class="active-1" href="Blog.html">
+            <small>CSE<br>Blog</small>
         </a>
         <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
-          target="_blank">
-          <small>UITS<br>G-Drive</small>
+            target="_blank">
+            <small>UITS<br>G-Drive</small>
         </a>
-      </div>
+    </div>
 
 
     <!-- BOTTOM BAR "navbar" -->
@@ -59,7 +58,9 @@
                     batch</small></b><br><br><small style="font-size: x-small;">Take Note that Files may be
                 outdated or
                 not organized to the latest course list.<br>In that case, please email me
-                at <a href="mailto:b1tranger.01@gmail.com" target="_blank" style="color: #8c8c8c;"><b>b1tranger.01@gmail.com</b></a> and let me know of the specific shortcomings of this page.
+                at <a href="mailto:b1tranger.01@gmail.com" target="_blank"
+                    style="color: #8c8c8c;"><b>b1tranger.01@gmail.com</b></a> and let me know of the specific
+                shortcomings of this page.
                 <br><br>Thanks in
                 advance!!
             </small></p>
