--- a/page-depth-01/page-depth-02/OSSU.html
+++ b/page-depth-01/page-depth-02/OSSU.html
@@ -14,22 +14,22 @@
     <!-- TOP BAR -->
 
     <div class="topnav-1">
-        <a class="active-1"
-          href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG" target="_blank"><small>web-app</small></a>
-        <a class="active-1" href="page-depth-01/Tutorials.html">
-          <small>Resources<br>Tutorials</small>
+        <a class="active-1" href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG"
+            target="_blank"><small>web-app</small></a>
+        <a class="active-1" href="../Tutorials.html">
+            <small>Resources<br>Tutorials</small>
         </a>
-        <a class="active-1" href="page-depth-01/References.html">
-          <small>Project<br>References</small>
+        <a class="active-1" href="../References.html">
+            <small>Project<br>References</small>
         </a>
-        <a class="active-1" href="page-depth-01\Blog.html">
-          <small>CSE<br>Blog</small>
+        <a class="active-1" href="../Blog.html">
+            <small>CSE<br>Blog</small>
         </a>
         <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
-          target="_blank">
-          <small>UITS<br>G-Drive</small>
+            target="_blank">
+            <small>UITS<br>G-Drive</small>
         </a>
-      </div>
+    </div>
 
 
     <!-- BOTTOM BAR "navbar" -->
@@ -49,32 +49,33 @@
     <div class="container-5" align=center>
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
-                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Open Source Society University</p>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Open Source Society
+                    University</p>
             </tr>
             <tr>
                 <td>
                     <a href="https://ossu.firebaseapp.com/#/" target="_blank">
-                      OSSU Website
+                        OSSU Website
                     </a>
-                  </td>
+                </td>
             </tr>
             <tr>
                 <td>
                     <a href="https://github.com/ossu" target="_blank">
-                      OSSU GitHub ⭐
+                        OSSU GitHub ⭐
                     </a>
-                  </td>
+                </td>
             </tr>
             <tr>
                 <td>
                     <a href="https://discord.gg/Geg29VA4rJ" target="_blank">
-                      OSSU Discord ⭐
+                        OSSU Discord ⭐
                     </a>
-                  </td>
+                </td>
             </tr>
-            
+
         </table>
-        
+
     </div>
 
 
