--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -258,15 +258,15 @@
     <!-- TOP BAR -->
 
     <div class="topnav-1">
-        <a class="active-1"
-            href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG" target="_blank"><small>web-app</small></a>
-        <a class="active-1" href="page-depth-01/Tutorials.html">
+        <a class="active-1" href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG"
+            target="_blank"><small>web-app</small></a>
+        <a class="active-1" href="Tutorials.html">
             <small>Resources<br>Tutorials</small>
         </a>
-        <a class="active-1" href="page-depth-01/References.html">
+        <a class="active-1" href="References.html">
             <small>Project<br>References</small>
         </a>
-        <a class="active-1" href="page-depth-01\Blog.html">
+        <a class="active-1" href="Blog.html">
             <small>CSE<br>Blog</small>
         </a>
         <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
