replaced apk download link

--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -258,7 +258,7 @@
     <!-- TOP BAR -->
 
     <div class="topnav-1">
-        <a class="active-1" href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG"
+        <a class="active-1" href="https://github.com/b1tranger/oUITS-Resources/releases/download/test/_oUITSr_appsgeyser.apk"
             target="_blank"><small>web-app</small></a>
         <a class="active-1" href="Tutorials.html">
             <small>Resources<br>Tutorials</small>
