--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- TOP BAR -->
 
   <div class="topnav-1">
-    <a class="active-1" href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG" target="_blank"><small>web-app</small></a>
+    <a class="active-1" href="https://github.com/b1tranger/oUITS-Resources/releases/download/test/_oUITSr_appsgeyser.apk" target="_blank"><small>web-app</small></a>
     <a class="active-1" href="page-depth-01/Tutorials.html">
       <small>Resources<br>Tutorials</small>
     </a>
