--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -137,7 +137,7 @@
 
     <div class="topnav-1">
         <a class="active-1"
-            href="https://drive.google.com/uc?export=download&id=1ZuYvpUCfQZWXR-FhFV16UaXa6L8cnqEG" target="_blank"><small>web-app</small></a>
+            href="https://github.com/b1tranger/oUITS-Resources/releases/download/test/_oUITSr_appsgeyser.apk" target="_blank"><small>web-app</small></a>
         <a class="active-1" href="Tutorials.html">
             <small>Resources<br>Tutorials</small>
         </a>
