added .js to simplify apk link updates

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 
 <body style="background-color:rgba(218, 237, 255, 0.343);">
 
+  
   <!-- TOP BAR -->
 
   <div class="topnav-1">
-    <a class="active-1" href="https://github.com/b1tranger/oUITS-Resources/releases/download/test/_oUITSr_appsgeyser.apk" target="_blank"><small>web-app</small></a>
+    <!-- APK LINK -->
+    <div class="navigation" style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
+    <script src="apk-link.js"></script>
     <a class="active-1" href="page-depth-01/Tutorials.html">
       <small>Resources<br>Tutorials</small>
     </a>
