--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -13,8 +13,11 @@
 
  <!-- TOP BAR -->
  <div class="topnav-1">
-  <a class="active-1" href="https://github.com/b1tranger/oUITS-Resources/releases/download/test/_oUITSr_appsgeyser.apk"
-      target="_blank"><small>web-app</small></a>
+        <!-- APK LINK -->
+        <div class="navigation"
+            style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
+        <script src="../../apk-link.js"></script>
+
   <a class="active-1" href="../Tutorials.html">
       <small>Resources<br>Tutorials</small>
   </a>
